application_processor/error.txt
GNU Make 4.4.1
Built for x86_64-pc-linux-gnu
Copyright (C) 1988-2023 Free Software Foundation, Inc.
License GPLv3+: GNU GPL version 3 or later <https://gnu.org/licenses/gpl.html>
This is free software: you are free to change and redistribute it.
There is NO WARRANTY, to the extent permitted by law.
Reading makefiles...
Loaded project.mk
/home/kali/rsa/Tufts-eCTF2024/msdk/Libraries/PeriphDrivers/periphdriver.mk:99: warning: overriding recipe for target 'clean.periph'
/home/kali/rsa/Tufts-eCTF2024/application_processor/project.mk:143: warning: ignoring old recipe for target 'clean.periph'
Updating makefiles....
Updating goal targets....
 File 'all' does not exist.
  File 'mkbuildir' does not exist.
 Must remake target 'mkbuildir'.
 Successfully remade target file 'mkbuildir'.
  File '/home/kali/rsa/Tufts-eCTF2024/application_processor/build/max78000.elf' does not exist.
   File '/home/kali/rsa/Tufts-eCTF2024/application_processor/build/application_processor.o' does not exist.
  Must remake target '/home/kali/rsa/Tufts-eCTF2024/application_processor/build/application_processor.o'.
  CC    src/application_processor.c
src/application_processor.c: In function 'hash_equal':
src/application_processor.c:278:38: warning: division 'sizeof (uint8_t * {aka unsigned char *}) / sizeof (uint8_t {aka unsigned char})' does not compute the number of array elements [-Wsizeof-pointer-div]
  278 |     size_t array_size = sizeof(hash1)/sizeof(uint8_t);
      |                                      ^
src/application_processor.c:277:26: note: first 'sizeof' operand was declared here
  277 | bool hash_equal(uint8_t* hash1, uint8_t* hash2) {
      |                 ~~~~~~~~~^~~~~
src/application_processor.c: In function 'secure_receive':
src/application_processor.c:425:13: warning: unused variable 'len' [-Wunused-variable]
  425 |     uint8_t len = poll_and_receive_packet(address, buffer);
      |             ^~~
src/application_processor.c: In function 'init':
src/application_processor.c:87:22: warning: 'return' with a value, in function returning void [-Wreturn-type]
   87 | #define ERROR_RETURN -1
      |                      ^
src/application_processor.c:564:16: note: in expansion of macro 'ERROR_RETURN'
  564 |         return ERROR_RETURN;
      |                ^~~~~~~~~~~~
src/application_processor.c:545:6: note: declared here
  545 | void init() {
      |      ^~~~
src/application_processor.c: In function 'exchange_aes_key':
src/application_processor.c:694:5: warning: statement with no effect [-Wunused-value]
  694 |     ap_public_key packet; // Use the corrected struct type
      |     ^~~~~~~~~~~~~
src/application_processor.c:694:18: error: expected ';' before 'packet'
  694 |     ap_public_key packet; // Use the corrected struct type
      |                  ^~~~~~~
      |                  ;
src/application_processor.c:695:5: error: 'packet' undeclared (first use in this function)
  695 |     packet.opcode = COMPONENT_AP_KEY_EXCHANGE;
      |     ^~~~~~
src/application_processor.c:695:5: note: each undeclared identifier is reported only once for each function it appears in
src/application_processor.c:729:5: warning: implicit declaration of function 'encrypt_sym' [-Wimplicit-function-declaration]
  729 |     encrypt_sym(aes_key, AES_KEY_SIZE, shared_secret, encrypted_aes_key);
      |     ^~~~~~~~~~~
src/application_processor.c: In function 'scan_components':
src/application_processor.c:793:9: warning: 'return' with no value, in function returning non-void [-Wreturn-type]
  793 |         return;
      |         ^~~~~~
src/application_processor.c:790:5: note: declared here
  790 | int scan_components() {
      |     ^~~~~~~~~~~~~~~
src/application_processor.c: In function 'attest_component':
src/application_processor.c:932:9: warning: unused variable 'dummy_encrypt' [-Wunused-variable]
  932 |     int dummy_encrypt = AES_encrypt(0, MXC_AES_128BITS, dummydata, dummyreceive);
      |         ^~~~~~~~~~~~~
make: *** [/home/kali/rsa/Tufts-eCTF2024/msdk/Libraries/CMSIS/Device/Maxim/GCC/gcc.mk:299: /home/kali/rsa/Tufts-eCTF2024/application_processor/build/application_processor.o] Error 1
